Созданы div-ы в ячейках секции team

--- a/index.html
+++ b/index.html
@@ -105,31 +105,38 @@
                 <ul class="team-list">
                     <li class="team-cell">
                         <img src="./images/2-1-demiantnko.jpg" alt="Игорь Демьяненко" width="270" height="260" />
-                        <h3 class="team-title">Игорь Демьяненко</h3>
-                        <p class="section-team-text">
-                            Product Designer
-                        </p>
+                        <div class="team-cell-text">
+                            <h3 class="team-title">Игорь Демьяненко</h3>
+                            <p class="section-team-text">
+                                Product Designer
+                            </p>
+                        </div>
                     </li>
                     <li class="team-cell">
                         <img src="./images/2-2-repina.jpg" alt="Поле" width="270" height="260" />
-                        <h3 class="team-title">Ольга Репина</h3>
-                        <p class="section-team-text">
-                            Frontend Developer
-                        </p>
+                        <div class="team-cell-text">
+                            <h3 class="team-title">Ольга Репина</h3>
+                            <p class="section-team-text">
+                                Frontend Developer
+                            </p>
                     </li>
                     <li class="team-cell">
                         <img src="./images/2-3-tarasov.jpg" alt="Николай Тарасов" width="270" height="260" />
-                        <h3 class="team-title">Николай Тарасов</h3>
-                        <p class="section-team-text">
-                            Marketing
-                        </p>
+                        <div class="team-cell-text">
+                            <h3 class="team-title">Николай Тарасов</h3>
+                            <p class="section-team-text">
+                                Marketing
+                            </p>
+                        </div>
                     </li>
                     <li class="team-cell">
                         <img src="./images/2-4-ermakov.jpg" alt="Михаил Ермаков" width="270" height="260" />
-                        <h3 class="team-title">Михаил Ермаков</h3>
-                        <p class="section-team-text">
-                            UI Designer
-                        </p>
+                        <div class="team-cell-text">
+                            <h3 class="team-title">Михаил Ермаков</h3>
+                            <p class="section-team-text">
+                                UI Designer
+                            </p>
+                        </div>
                     </li>
                 </ul>
             </div>
