Исправлена ошибка, найденая валидатором  в html

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                             <p class="section-team-text">
                                 Frontend Developer
                             </p>
+                        </div>
                     </li>
                     <li class="team-cell">
                         <img src="./images/2-3-tarasov.jpg" alt="Николай Тарасов" width="270" height="260" />
